acvus-mir-test/tests/snapshots/e2e__extern_fn_object_return.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     2 |   r1 = call #0(1 (r2)) [r3 -> r4]
     3 |   assign u = r1
     5 |   r5 = take u.name
     6 |   r6 = string_concat [T0, r5]
     7 |   return r6 [r4]

    ; r0 (v12) : Order
    ; r1 (get_user(...)) : {age: Int, name: String}
    ; r2 (v3) : Int
    ; r3 (v1) : Order
    ; r4 (v6) : Order
    ; r5 (u.name) : String
    ; r6 (v10) : String
    ; r7 (v11) : Order
    ; r8 (v5) : Order
    ; r9 (v8) : String
