acvus-mir-test/tests/snapshots/e2e__field_access_on_destructured.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = fetch @pair
     2 |   assign @pair = r1
     3 |   r2 = ref &@pair
     4 | L2:
     6 |   r3 = ref &(*r2)[0]
     8 |   r4 = true (r5) && true (r6)
     9 |   jump_if r4 then L3 else L1
    10 | L3:
    11 |   r7 = ref &(*r2)[0]
    12 |   r8 = take (*r7).name
    13 |   r9 = string_concat [r8]
    14 |   jump L0(r9, r7)
    15 | L1:
    17 |   jump L0(T0, r0)
    18 | L0(r10: String, r11: &{name: String}):  ; merge_of L2
    19 |   r12 = string_concat [r10]
    20 |   r13 = take @pair
    21 |   commit @pair = r13
    22 |   return r12

    ; r0 (v17) : &{name: String}
    ; r1 (@pair) : ({name: String}, i64)
    ; r2 (@pair.) : &({name: String}, i64)
    ; r3 ((*r3).[0]) : &{name: String}
    ; r4 (v7) : Bool
    ; r5 (v4) : Bool
    ; r6 (v6) : Bool
    ; r7 (obj) : &{name: String}
    ; r8 ((*r10).name) : String
    ; r9 (v12) : String
    ; r10 (v14) : String
    ; r11 (v18) : &{name: String}
    ; r12 (v15) : String
    ; r13 (v16) : ({name: String}, i64)
    ; r14 (obj) : &{name: String}
    ; r15 (@pair) : ({name: String}, i64)
    ; r16 (v10) : &{name: String}
    ; r17 (v13) : String
