acvus-mir-test/tests/snapshots/e2e__filter_object_field_equality.snap
---
source: acvus-mir-test/tests/e2e.rs
assertion_line: 1206
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = undef
     3 |   r3 = fetch @users
     5 |   r4 = list []
     6 |   r5 = call #0(r4)
     8 |   r6 = call #1(r3)
     9 |   r7 = closure L0 []
    10 |   r8 = call #2(r6, r7)
    11 |   r9 = call #3(r8)
    13 |   r10 = call #4(r9)
    14 |   r11 = call #5(r10)
    15 |   r12 = string_concat [T0, T0, T0, r11]
    16 |   commit @users = r5
    17 |   return r12

    ; r0 (v21) : List<{active: Bool, name: String}>
    ; r1 (v22) : List<{active: Bool, name: String}>
    ; r2 (v23) : List<{active: Bool, name: String}>
    ; r3 (@users) : List<{active: Bool, name: String}>
    ; r4 (v6) : Array<{active: Bool, name: String}, 0>
    ; r5 (list(...)) : List<{active: Bool, name: String}>
    ; r6 (into_iter(...)) : Iterator<{active: Bool, name: String}, Pure, #IdentityId(0)>
    ; r7 (v11) : Fn(&{active: Bool, name: String}) -> Bool
    ; r8 (filter(...)) : Iterator<{active: Bool, name: String}, Pure, #IdentityId(0)>
    ; r9 (collect(...)) : List<{active: Bool, name: String}>
    ; r10 (len(...)) : Int
    ; r11 (to_string(...)) : String
    ; r12 (v19) : String
    ; r13 (@users) : List<{active: Bool, name: String}>
    ; r14 (x) : List<{active: Bool, name: String}>
    ; r15 (v20) : List<{active: Bool, name: String}>
    ; r16 (users) : List<{active: Bool, name: String}>
    ; r17 (v15) : String
    ; r18 (users) : List<{active: Bool, name: String}>
    ; r19 (@users) : List<{active: Bool, name: String}>
    ; r20 (v5) : String
    ; r21 (x) : List<{active: Bool, name: String}>
    ; r22 (v8) : String

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     1 |   r1 = take (*r2).active
     2 |   return r1

    ; r0 (v5) : &{active: Bool, name: String}
    ; r1 ((*r3).active) : Bool
    ; r2 (v1) : &{active: Bool, name: String}
    ; r3 (v3) : &{active: Bool, name: String}
    ; r4 (u) : &{active: Bool, name: String}
