acvus-mir-test/tests/snapshots/e2e__init_field_load_passes.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 |   r0 = ref @a
     1 |   r1 = load r0
     3 |   r3 = object {x: 42 (r2)}
     4 |   r4 = ref @a
     5 |   store r4 = r3
     6 |   r5 = ref @a
     7 |   r6 = r3.x
     8 |   return r6

    ; r0 (v9) : Ref<{x: Int}>
    ; r1 (v8) : {x: Int}
    ; r2 (v1) : Int
    ; r3 (v2) : {x: Int}
    ; r4 (@a) : Ref<{x: Int}>
    ; r5 (v6) : Ref<{x: Int}>
    ; r6 (v5) : Int
    ; r7 (v7) : {x: Int}
    ; r8 (@a.x) : Ref<Int>
