acvus-mir-test/tests/snapshots/e2e__iter_tuple_destructure.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     2 |   r1 = ref @pairs
     3 |   r2 = load r1
     6 |   jump L0(0 (r3), T0, r0)
     7 | L0(r4: Int, r5: String, r6: String):
     8 |   list_step r7, r8 = r2[r4] else L1(r5)
     9 | L3:
    10 |   r9 = r7.0
    12 |   r10 = T0 + r9
    13 |   r11 = r5 + r10
    14 |   jump L0(r8, r11, r9)
    15 | L1(r12: String):
    16 |   jump L2(r12)
    17 | L2(r13: String):
    18 |   r14 = T0 + r13
    19 |   return r14

    ; r0 (v21) : String
    ; r1 (@pairs) : Ref<List<(String, Int)>>
    ; r2 (v3) : List<(String, Int)>
    ; r3 (v4) : Int
    ; r4 (v6) : Int
    ; r5 (v7) : String
    ; r6 (v22) : String
    ; r7 (v8) : (String, Int)
    ; r8 (v9) : Int
    ; r9 (a) : String
    ; r10 (v16) : String
    ; r11 (v17) : String
    ; r12 (v18) : String
    ; r13 (v19) : String
    ; r14 (v20) : String
    ; r15 (v14) : Ref<String>
    ; r16 (v1) : String
    ; r17 (a) : String
    ; r18 (v5) : String
    ; r19 (v13) : String
    ; r20 (v12) : Ref<String>
