acvus-mir-test/tests/snapshots/e2e__lambda_capture_local_var_ref.snap
---
source: acvus-mir-test/tests/e2e.rs
assertion_line: 1073
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = undef
     3 |   r3 = undef
     4 |   r4 = fetch @items
     8 |   r5 = list []
     9 |   r6 = call #0(r5)
    11 |   r7 = call #1(r4)
    12 |   r8 = closure L0 [10 (r9)]
    13 |   r10 = call #2(r7, r8)
    14 |   r11 = call #3(r10)
    16 |   r12 = call #4(r11)
    17 |   r13 = call #5(r12)
    18 |   r14 = string_concat [T0, T0, T0, T0, r13]
    19 |   commit @items = r6
    20 |   return r14

    ; r0 (v25) : List<Int>
    ; r1 (v26) : Int
    ; r2 (v27) : List<Int>
    ; r3 (v28) : List<Int>
    ; r4 (@items) : List<Int>
    ; r5 (v9) : Array<Int, 0>
    ; r6 (list(...)) : List<Int>
    ; r7 (iter(...)) : Iterator<Int, Pure, #IdentityId(0)>
    ; r8 (v15) : Fn(&Int) -> Bool
    ; r9 (v3) : Int
    ; r10 (filter(...)) : Iterator<Int, Pure, #IdentityId(0)>
    ; r11 (collect(...)) : List<Int>
    ; r12 (len(...)) : Int
    ; r13 (to_string(...)) : String
    ; r14 (v23) : String
    ; r15 (v11) : String
    ; r16 (offset) : &Int
    ; r17 (@items) : List<Int>
    ; r18 (x) : List<Int>
    ; r19 (items) : List<Int>
    ; r20 (x) : List<Int>
    ; r21 (@items) : List<Int>
    ; r22 (items) : List<Int>
    ; r23 (offset) : Int
    ; r24 (v24) : List<Int>
    ; r25 (v5) : String
    ; r26 (v8) : String
    ; r27 (v19) : String

=== closure L0 (ValueId(1)) [captures: [ValueId(0)]] ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = take (*r3)
     3 |   r4 = take (*r5)
     4 |   r6 = r2 > r4
     5 |   return r6

    ; r0 (v10) : &Int
    ; r1 (v11) : &Int
    ; r2 (v6) : Int
    ; r3 (v2) : &Int
    ; r4 (v8) : Int
    ; r5 (v1) : &Int
    ; r6 (v9) : Bool
    ; r7 (offset) : &Int
    ; r8 (offset) : &Int
    ; r9 (i) : &Int
    ; r10 (i) : &Int
