acvus-mir-test/tests/snapshots/e2e__lambda_chained_field_access.snap
---
source: acvus-mir-test/tests/e2e.rs
assertion_line: 1112
expression: ir
---
=== literals ===
  T0 = ""
  T1 = ","

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = undef
     3 |   r3 = fetch @users
     5 |   r4 = list []
     6 |   r5 = call #0(r4)
     8 |   r6 = call #1(r3)
     9 |   r7 = closure L0 []
    10 |   r8 = call #2(r6, r7)
    13 |   r9 = call #3(r8, T1)
    14 |   r10 = string_concat [T0, T0, T0, r9]
    15 |   commit @users = r5
    16 |   return r10

    ; r0 (v20) : List<{address: {city: String}}>
    ; r1 (v21) : List<{address: {city: String}}>
    ; r2 (v22) : Iterator<String, Pure, #IdentityId(0)>
    ; r3 (@users) : List<{address: {city: String}}>
    ; r4 (v6) : Array<{address: {city: String}}, 0>
    ; r5 (list(...)) : List<{address: {city: String}}>
    ; r6 (iter(...)) : Iterator<{address: {city: String}}, Pure, #IdentityId(0)>
    ; r7 (v11) : Fn({address: {city: String}}) -> String
    ; r8 (map(...)) : Iterator<String, Pure, #IdentityId(0)>
    ; r9 (join(...)) : String
    ; r10 (v18) : String
    ; r11 (@users) : List<{address: {city: String}}>
    ; r12 (v14) : String
    ; r13 (users) : List<{address: {city: String}}>
    ; r14 (x) : Iterator<String, Pure, #IdentityId(0)>
    ; r15 (v5) : String
    ; r16 (x) : Iterator<String, Pure, #IdentityId(0)>
    ; r17 (@users) : List<{address: {city: String}}>
    ; r18 (users) : List<{address: {city: String}}>
    ; r19 (v16) : String
    ; r20 (v8) : String
    ; r21 (v19) : List<{address: {city: String}}>

=== closure L0 (ValueId(0)) ===
     0 |   assign u = r0
     1 |   r1 = take u.address.city
     2 |   return r1

    ; r0 (v1) : {address: {city: String}}
    ; r1 (u.address.city) : String
    ; r2 (u) : {address: {city: String}}
